--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -90,7 +90,7 @@
         bottom: 57px;
     }
 }
-@media(min-width: 768px) and (max-width:1023){
+@media(min-width: 768px) and (max-width:1023px){
     .btnStyleBannerHotelsResult {
         left: 487px;
     }
