--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -88,7 +88,7 @@
 
     .btnStyleBannerHotelsResult {
         left: 18px;
-        bottom: 57px;
+        bottom: 29%;
     }
 }
 @media(min-width: 768px) and (max-width:1023px){
