--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -54,10 +54,12 @@
 
 .btnStyleBannerHotelsResult:hover {
     background-color: #283747;
+    color: white;
 }
 
 .btnStyleBannerHotelsResult:active {
     background-color: #272626;
+    color: white;
 }
 
 @media(max-width: 767px) {
