--- a/MULT265/style.css
+++ b/MULT265/style.css
@@ -1,19 +1,19 @@
 .btn_login-button{
-    width: 109px;
-    height: 28px;
-    color: #0D4E88;
+    width: 109px !important;
+    height: 28px !important;
+    color: #0D4E88 !important;
 }
 
 .btn_login-button:active{
-    background-color:#283747;
-    color: white;
-    border: 1px solid;
-    border-radius: 40px;
+    background-color:#283747 !important;
+    color: white !important;
+    border: 1px solid !important;
+    border-radius: 40px !important;
 }
 
 .btn_login-button:hover{
-    background-color:#283747;
-    border: 1px solid;
-    border-radius: 40px;
-    color: white;
+    background-color:#283747 !important;
+    border: 1px solid !important;
+    border-radius: 40px !important;
+    color: white !important;
 }
