--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -329,6 +329,9 @@
 /* **** */
 
 .btn_login-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     width: 109px !important;
     height: 28px !important;
     color: #0D4E88 !important;
