--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -335,10 +335,10 @@
 .btn_login-button{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 114px;
     height: 28px;
-    color: #0D4E88 ;
+    color: #0D4E88;
     background-color: white;
     border: 0;
     border-radius: 40px;
@@ -359,4 +359,11 @@
 }
 .main_container__buttonARSEs__ARS > div {
     padding: 4px;
+}
+.main__container__widget_text__ars{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
 }
