--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -366,3 +366,8 @@
     line-height: 17px;
     color: #0D4E88;
 }
+#container__widget__ars > .glyphicon-user-profile{
+    font-size: 20px;
+    color: #0D4E88;
+    font: optional;
+}
