--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -61,6 +61,9 @@
     background-color: #272626;
     color: white;
 }
+.details-card__info>.details-card__phone.hidden-xs{
+    display: none;
+}
 
 @media(max-width: 767px) {
     .main__container_excluvisa {
