--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -22,9 +22,9 @@
   margin: 0 !important;
 }
 
-/* .custom-content-botton {
+.custom-content-botton {
   display: none;
-} */
+}
 
 @media(max-width:767px) {
   .toastify {
@@ -55,7 +55,7 @@
     border-radius: 100%;
     color: black;
     text-align: center;
-    display: none;
+    display: inline;
     align-items: center;
     justify-content: center;
   }
