--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -192,6 +192,12 @@
 .right-0px {
   right: 0px;
 }
+.availability__options--all-options >.pricetag__item--currency{
+  font-size: 20px;
+}
+.result-option-package__table{
+  display: none;
+}
 
 @media (max-width: 767px) {
   .share__icon {
