--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -195,7 +195,8 @@
 .availability__options--all-options >.pricetag__item--currency{
   font-size: 20px;
 }
-.result-option-package__table{
+.result-option-package__table,
+.result-option__offer-info{
   display: none;
 }
 
