--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -192,7 +192,7 @@
 .right-0px {
   right: 0px;
 }
-.pricetag__item--currency{
+.result-option__booking{
   font-size: 20px;
 }
 .result-option-package__table,
