--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -72,7 +72,7 @@
   width: 144px;
   height: 34px;
   padding: 8px 24px;
-  background: #DF0032;
+  background: #0D4E88;
   border-radius: 12px;
   position: relative;
   right: 0;
