--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -73,6 +73,7 @@
   height: 34px;
   padding: 8px 24px;
   background: #0D4E88;
+  border: 0;
   border-radius: 12px;
   position: relative;
   right: 0;
