--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -297,7 +297,7 @@
     background-color: white;
     border: 0;
     border-radius: 40px;
-    color: #0D4E88 !important;
+    color: #0D4E88;
     justify-content: center;
     gap: 5px;
 }
