--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -26,7 +26,7 @@
 
 .deals>.label-info {
   display: block;
-  width: 161px !important;
+  min-width: 161px !important;
   height: 33px !important;
   background-color: #1585e6 !important;
   font-size: 14px;
@@ -109,6 +109,7 @@
 }
 
 .iconStar {
+  display: none;
   background: #1377CE;
   color: white;
   border-radius: 100%;
@@ -195,6 +196,7 @@
 .result-option__offer-info {
   display: none !important;
 }
+
 
 @media (max-width: 767px) {
   .share__icon {
