--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -356,7 +356,6 @@
     display: none;
 }
 
-
 @media (max-width:767px) {
     .upper-menu_quicklinks>.container-fluid {
         display: block;
@@ -409,3 +408,9 @@
     }
 
 }
+
+/* ***************** MULT-305 **************** */
+.main-footer .footer__text .glyphicon {
+    color: rgba(255, 255, 255, .85) !important;
+    font-size: 1.5rem !important;
+  }
