--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -410,7 +410,7 @@
 }
 
 /* ***************** MULT-305 **************** */
-.footer-bottom__link > glyphicon-whatsapp-bottomless{
+.footer-bottom__link > .glyphicon-whatsapp-bottomless{
     color: rgba(255, 255, 255, .85) !important;
     font-size: 1.5rem !important;
   }
