--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -140,8 +140,8 @@
     color: #8C8C8C;
 }
 
-.glyphicon-phone,
-.glyphicon-whatsapp-bottomless {
+/* .main__container__modalContactos.glyphicon-phone,
+.main__container__modalContactos.glyphicon-whatsapp-bottomless {
     width: 32px;
     height: 32px;
     border-radius: 50%;
@@ -151,7 +151,19 @@
     line-height: 0;
     color: white;
     padding: 16px;
-}
+} */
+
+.glyphicon[class$="${iconModal}"] {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 0;
+    color: white;
+    padding: 16px;
+  }
 
 .btn_Style_Venta_llamar:hover {
     background-color: #283747;
