--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -140,8 +140,8 @@
     color: #8C8C8C;
 }
 
-.main__container__modalContactos.glyphicon-phone,
-.main__container__modalContactos.glyphicon-whatsapp-bottomless {
+.glyphicon-phone,
+.glyphicon-whatsapp-bottomless {
     width: 32px;
     height: 32px;
     border-radius: 50%;
@@ -152,7 +152,6 @@
     color: white;
     padding: 16px;
 }
-
 
 .btn_Style_Venta_llamar:hover {
     background-color: #283747;
