--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -20,7 +20,8 @@
   top: 55px;
   right: 20px;
 }
-.right-14px{
+
+.right-14px {
   right: 24px !important;
 }
 
@@ -181,6 +182,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  width: 62%;
 }
 
 .main__container__bannerMensageCard>p {
@@ -190,9 +192,11 @@
 .right-0px {
   right: 0px;
 }
+
 .result-option__price.d-flex-right .renderPriceTag {
   font-size: 20px !important;
 }
+
 .result-option__offer-info {
   display: none !important;
 }
@@ -274,7 +278,7 @@
     position: absolute !important;
     width: 135px;
     left: -12px;
-    top: 170px;
+    top: 165px;
     height: 50px;
 
   }
@@ -285,11 +289,11 @@
   }
 
   .info-card__actions .info-card__options-toggle {
-    width: 120px;
+    width: 231px;
     display: block;
-    bottom: -20px;
+    bottom: -64px;
     position: absolute;
-    left: 15px;
+    left: -108px;
   }
 
   .info-card__location--action.js-result-map-toggle {
@@ -311,6 +315,13 @@
 
   .main__container__bannerMensageCard__App {
     bottom: 72px;
+  }
+
+  .divTaxCopyStyle {
+    position: absolute;
+    width: 150px;
+    right: 40px;
+    bottom: 3px;
   }
 }
 
