--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -84,7 +84,7 @@
   width: 117px;
   bottom: 24px;
   position: absolute;
-  right: 32px;
+  right: 19px;
   padding-right: 0 !important;
   display: block;
 }
@@ -247,6 +247,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
   }
 
   .info-card__image {
@@ -329,6 +330,9 @@
     right: -155px;
     bottom: 2px;
     text-align: left;
+  }
+  .right-14px{
+    right: 0 !important;
   }
 }
 
