--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -297,7 +297,7 @@
   }
 
   .info-card__actions .info-card__options-toggle {
-    width: 100%;
+    width: 244px;
     display: block;
     bottom: -56px;
   }
