--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -26,7 +26,7 @@
 }
 
 .deals>.label-info {
-  display: block;
+  display: inline-block;
   min-width: 161px !important;
   height: 33px !important;
   background-color: #1585e6 !important;
@@ -70,14 +70,11 @@
 .info-card__options-toggle {
   font-weight: 600;
   letter-spacing: 1px;
-  width: 144px;
   height: 34px;
-  padding: 8px 24px;
   background: #0D4E88;
   border: 0;
   border-radius: 12px;
-  position: relative;
-  right: 0;
+  float: none !important;
 }
 
 .info-card__actions {
@@ -288,19 +285,11 @@
   }
 
   .info-card__actions {
-    width: 88%;
-    bottom: 24px;
-    position: absolute;
-    right: 20px;
-    padding-right: 0 !important;
-    display: block;
+    bottom: -33px;
   }
 
   .info-card__options-toggle {
     width: 244px;
-    display: block;
-    bottom: -56px;
-    right: -7px;
   }
 
   .info-card__location--action.js-result-map-toggle {
@@ -331,10 +320,7 @@
     bottom: 2px;
     text-align: left;
   }
-  .right-14px{
-    width: 241px;
-    right: -5px !important;
-  }
+
 }
 
 /* .result.hotel-result{
