--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -1,31 +1,410 @@
+/* Promo AR */
+.banner__promo {
+    display: flex;
+    align-items: center;
+    position: relative;
+    border-radius: 4px 4px 40px 4px !important;
+    min-height: 96px;
+    padding: 25px 4px !important;
+}
+
+.promo__ar {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    padding: 7px;
+}
+
+.glyphicon-agent {
+    font-size: 43px;
+    margin: 0 5px;
+}
+
+.promo__ar_parrafo>h3 {
+    font-size: 16px;
+    font-weight: 700;
+    margin: 0 !important;
+}
+
+.promo__ar__btn {
+    border-radius: 40px;
+    width: 110px;
+    height: 33px;
+    font-size: 14px;
+    margin: 0 51px;
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+    .promo__ar {
+        flex-direction: column;
+    }
+}
+
+/* ********************************************* */
+
+/* MULT-205 */
 .confirm-booking__promocodes {
+    display: flex !important;
+    justify-content: space-between;
+    padding: 6px 0 !important;
     border-radius: 8px;
     border: 2px solid #0D4E88;
     background-color: #DEE9F5;
     background-image: url(https://multitravelcom.github.io/style/General/img/cupon%20descuento.svg);
     height: auto;
     background-size: 100% auto;
-  }
-  .promocodes__container--image{
+}
+
+.container__conocer__cupones {
+    max-width: 366px;
+    min-height: 130px;
+
+    background: #2A91EB;
+    border: 1px solid #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 16px 0px 0 40px;
+    padding: 16px;
+}
+
+.promocodes__container--image {
     display: none;
-  }
-  .promocodes__container{
+}
+
+.container__conocer__cupones__btn {
+    text-align: center;
+}
+
+.container__conocer__cupones__p>p {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    margin-bottom: 1.2rem;
+    color: #FFFFFF;
+}
+
+.promocodes__container {
     margin-bottom: 2rem;
-    margin-left: 7rem;
-  }
-  
-  .promocode__apply-button {
+    margin-left: 9rem;
+}
+
+.promocode__apply-button {
     background: #0D4E88;
     border-color: #0D4E88;
     border-radius: 8px;
     width: 83px;
     height: 40px;
-  }
-  
-  .promocode__apply-button:hover {
+}
+
+.cupones__btn__style {
+    background: #2A91EB;
+    border: 1px solid #FFFFFF;
+    box-shadow: 0px 4px 8px rgba(13, 78, 136, 0.25);
+    border-radius: 8px;
+    align-items: center;
+    padding: 10px;
+    color: #FFFFFF;
+}
+
+.promocode__apply-button:hover {
     background: #0D4E88 !important;
     border-color: #0D4E88 !important;
-  }
-  .promocodes__container--title>.glyphicon-info-circle{
+}
+
+.promocodes__container--title>.glyphicon-info-circle {
     display: none;
-  }
+}
+
+@media(max-width: 767px) {
+    .container__conocer__cupones {
+        width: 100%;
+    }
+
+    .confirm-booking__promocodes {
+        flex-direction: column;
+    }
+
+    .promocodes {
+        margin: auto;
+        text-align: center;
+    }
+
+    .promocodes__container {
+        margin: auto;
+    }
+
+}
+
+@media(min-width:768px) and (max-width: 1025px) {
+    .confirm-booking__promocodes {
+        justify-content: flex-end;
+    }
+
+    .container__conocer__cupones {
+        max-width: 304px;
+        height: 130px;
+
+    }
+
+    .promocodes__container {
+        margin-left: 0;
+    }
+}
+
+/* Estilos del modal */
+.overlay__cupones {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal__content-title {
+    text-align: center;
+    background-color: #2A91EB;
+    color: white;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 49px;
+    color: #FFFFFF;
+    padding: .5rem;
+}
+
+.modal__content-title>h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 49px;
+    color: #FFFFFF;
+
+}
+
+.modal__content-title-h3>h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 40px;
+    margin-bottom: .5rem;
+}
+
+.modal__content-title-circle>p {
+    font-style: italic;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    margin: auto;
+    padding: 15px 0;
+    max-width: 390px;
+}
+
+.glyphicon-calendar>p {
+    margin: auto 0;
+}
+
+.modal__content-title-calendar {
+
+    font-style: italic;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+.modal__content-cupon>h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 25px;
+    text-align: center;
+    color: #0D4E88;
+}
+
+.modal__content-cupon {
+    padding: 1rem;
+    text-align: center;
+    margin: auto;
+}
+
+.glyphicon-info-circle {
+    margin: auto;
+}
+
+.modal__content-cupon>span {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
+    color: #CCCCCC;
+
+}
+
+.modal__cupones {
+    max-width: 90%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #FFFFFF;
+    border: 1px solid #0D4E88;
+    border-radius: 16px;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.modal-content__cupones {
+    padding: 20px;
+}
+
+.modal__content-title-circle,
+.modal__content-title-calendar {
+    display: flex;
+    align-items: center;
+}
+
+.modal__content-uno-title {
+    display: flex;
+}
+
+.modal-content__cupones-row {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+}
+
+.modal__content-uno,
+.modal__content-dos,
+.modal__content-tres {
+    width: 93%;
+    display: flex;
+    margin: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
+    background: #FFFFFF;
+    border: 1px solid #0D4E88;
+    border-radius: 16px;
+}
+
+.modal__content-title-circleCalendar {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border-right: 1px dashed #0D4E88;
+
+}
+
+.modal__content-uno-logo {
+    width: 130px;
+    border-radius: 1rem 0 0 1rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background: rgba(13, 78, 136, 0.1);
+    background-image: url(https://multitravelcom.github.io/style/General/img/Logo%20AA%20cupon.svg);
+    border-right: 1px dashed #0D4E88;
+}
+
+.close {
+    position: absolute;
+    top: 6px;
+    right: 12px;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+    border-radius: 50%;
+    background: white;
+    padding: 8px;
+    opacity: 1 !important;
+}
+
+.glyphicon-calendar {
+    color: #2196F3;
+    font-size: 19px;
+    min-width: 32px;
+}
+
+.booking-steps__item {
+    z-index: 0 !important;
+}
+
+@media(max-width: 467) {
+    .promocodes__container {
+        margin-left: 4rem;
+    }
+
+    .modal__cupones {
+        width: 90%;
+    }
+}
+
+@media(max-width: 1024px) {
+    .modal__content-title {
+        padding: 0;
+    }
+
+    .modal__content-title>h2 {
+        font-size: 13px;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+    .modal__content-uno-logo {
+        height: 35px;
+        width: 100%;
+        margin-bottom: 0.5rem;
+        background-size: 15%;
+        border-radius: 1rem 1rem 0 0;
+        border-right: 0;
+    }
+
+    .modal__content-cupon {
+        padding: 5px;
+    }
+
+    .modal-content__cupones-row {
+        margin: 0 2rem;
+    }
+
+    .modal__content-title-h3>h2 {
+        font-size: 19px;
+        line-height: 12px;
+        text-align: center;
+        line-height: 24px;
+    }
+
+    .modal__content-uno,
+    .modal__content-dos,
+    .modal__content-tres {
+        flex-direction: column;
+    }
+
+    .modal__content-uno-title {
+        flex-direction: column;
+    }
+
+    .modal__content-title-circleCalendar {
+        flex-direction: column;
+        padding: 0.5rem 1rem;
+        border-bottom: 1px dashed #0D4E88;
+        border-left: 0px dashed #0D4E88;
+    }
+
+    .modal__content-dos-logo,
+    .modal__content-tres-logo {
+        height: 67px;
+    }
+
+    .container__conocer__cupones {
+        width: 100%;
+    }
+}
