--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -137,15 +137,25 @@
 
 }
 
-@media(min-width:768px) and (max-width: 1025px) {
+@media(min-width:769px) and (max-width: 1025px) {
     .confirm-booking__promocodes {
         justify-content: flex-end;
     }
 
     .container__conocer__cupones {
-        max-width: 304px;
+        max-width: 275px;
         height: 130px;
+        position: relative;
+    }
 
+    .container__conocer__cupones__p>p {
+        font-size: 14px;
+    }
+
+    .cupones__btn__style {
+        position: absolute;
+        left: 28%;
+        bottom: 16px;
     }
 
     .promocodes__container {
