--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -159,6 +159,9 @@
     }
 
     .promocodes__container {
+        position: absolute;
+        bottom: 16px;
+        left: 15%;
         margin-left: 0;
     }
 }
