--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -54,6 +54,7 @@
     background-image: url(https://multitravelcom.github.io/style/General/img/cupon%20descuento.svg);
     height: auto;
     background-size: 100% auto;
+    position: relative;
 }
 
 .container__conocer__cupones {
@@ -86,7 +87,7 @@
 }
 
 .promocodes__container {
-    margin-left: 9rem;
+    position: absolute
 }
 
 .promocode__apply-button {
@@ -124,6 +125,7 @@
     .confirm-booking__promocodes {
         flex-direction: column;
         align-items: flex-end;
+        height: 271px;
     }
 
     .promocodes {
@@ -133,6 +135,8 @@
 
     .promocodes__container {
         margin: auto;
+        width: 100%;
+        position: inherit;
     }
 
 }
