--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -63,6 +63,7 @@
 
     background: #2A91EB;
     border: 1px solid #FFFFFF;
+    border-right: 0;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 16px 0px 0 40px;
     padding: 16px;
@@ -120,6 +121,9 @@
 
 .container__conocer__cupones__p>p {
     font-size: 14px;
+}
+.form-control{
+    border-radius: 8px !important;
 }
 
 @media(max-width: 467px) {
