--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -98,6 +98,7 @@
     border-radius: 8px;
     width: 83px;
     height: 40px;
+    margin-left: 10px;
 }
 
 .cupones__btn__style {
@@ -122,7 +123,8 @@
 .container__conocer__cupones__p>p {
     font-size: 14px;
 }
-.form-control{
+
+.form-control {
     border-radius: 8px !important;
 }
 
@@ -139,7 +141,9 @@
     }
 
     .container__conocer__cupones {
-        width: 100%;
+        width: 96%;
+        border-radius: 16px 16px 16px 40px;
+        border: 1px solid #FFFFFF;
     }
 
     .confirm-booking__promocodes {
