--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -268,6 +268,8 @@
     justify-content: center;
     text-align: center;
     margin: auto;
+    width: 30%;
+    align-items: center;
 }
 
 .modal__content-cupon>span {
