--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -317,6 +317,7 @@
 .modal-content__cupones-row {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 1rem;
 }
 
