--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -45,7 +45,7 @@
 
 /* MULT-205 */
 .confirm-booking__promocodes {
-    display: none !important;
+    display: none;
     justify-content: space-between;
     padding: 6px 0 !important;
     border-radius: 8px;
