--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -43,7 +43,7 @@
 
 /* ********************************************* */
 /* MULT-205 */
-.confirm-booking__section {
+.booking-data__data>.confirm-booking__section {
     margin-bottom: 30px;
 }
 
