--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -170,7 +170,9 @@
         top: 16px;
         right: 21px;
     }
-
+    .booking-breakdown__table .shopping-basket__line{
+        padding: 0 10px !important;
+    }
 }
 
 
