--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -117,6 +117,14 @@
     background: #0D4E88 !important;
     border-color: #0D4E88 !important;
 }
+.cupones__btn__style:hover{
+    background: #0D4E88 !important;
+    border-color: #0D4E88 !important;
+}
+.cupones__btn__style:active{
+    background: #0c3e69 !important;
+    border-color: #0c3e69 !important;
+}
 
 .promocodes__container--title>.glyphicon-info-circle {
     display: none;
